@@ -7,7 +7,8 @@ struct vaht_archive_s;
 typedef struct vaht_archive_s vaht_archive;
 
 vaht_archive* vaht_archive_open(const char* filename);
-void vaht_archive_close(vaht_archive* archive);
+uint16_t vaht_archive_close(vaht_archive* archive);
+uint16_t vaht_archive_grab(vaht_archive* archive);
 uint16_t vaht_archive_get_resource_types(vaht_archive* archive);
 char* vaht_archive_get_resource_type(vaht_archive* archive, uint16_t i);
 
