@@ -110,6 +110,7 @@ vaht_resource* vaht_resource_open(vaht_archive* archive, const char* type, uint1
 		fread(ret->name, 1, len, archive->fd);
 	}
 	
+	vaht_archive_grab(archive);
 	ret->refcount = 1;
 	
 	return ret;
@@ -120,7 +121,8 @@ uint16_t vaht_resource_close(vaht_resource* resource)
 	resource->refcount--;
 	if (resource->refcount > 0)
 		return resource->refcount;
-
+	
+	vaht_archive_close(resource->archive);
 	free(resource->name);
 	free(resource);
 	return 0;
@@ -129,6 +131,7 @@ uint16_t vaht_resource_close(vaht_resource* resource)
 uint16_t vaht_resource_grab(vaht_resource* resource)
 {
 	resource->refcount++;
+	return resource->refcount;
 }
 
 vaht_resource** vaht_resources_open(vaht_archive* archive, const char* type)
